--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,8 @@
   "description": "Javascript Java Chess Game with ActiveMQ",
   "main": "index.js",
   "scripts": {
+    "dev": "webpack-dev-server --mode development",
+    "build": "webpack --mode production",
     "start": "babel-node index.js"
   },
   "keywords": [
@@ -15,6 +17,8 @@
   "license": "MIT",
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0",
     "stompit": "^0.26.0"
   },
   "devDependencies": {
@@ -22,11 +26,23 @@
     "@babel/core": "^7.1.2",
     "@babel/node": "^7.0.0",
     "@babel/preset-env": "^7.1.0",
+    "babel-loader": "^8.0.4",
+    "css-loader": "^1.0.1",
     "eslint": "^5.8.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-standard": "^4.0.0"
+    "eslint-plugin-standard": "^4.0.0",
+    "file-loader": "^2.0.0",
+    "html-webpack-plugin": "^3.2.0",
+    "image-webpack-loader": "^4.5.0",
+    "mini-css-extract-plugin": "^0.4.4",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.0.1",
+    "webpack": "^4.24.0",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10"
   }
 }
