--- a/javascript/package.json
+++ b/javascript/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "webpack-dev-server --mode development",
     "build": "webpack --mode production",
-    "start": "babel-node index.js"
+    "start": "nodemon --exec babel-node ./src/server.js"
   },
   "keywords": [
     "activemq",
@@ -20,6 +20,11 @@
     "@stomp/stompjs": "^5.0.0",
     "@uirouter/angularjs": "^1.0.20",
     "angular": "^1.7.5",
+    "angular-cookies": "^1.7.5",
+    "body-parser": "^1.18.3",
+    "bootstrap": "^4.1.3",
+    "express": "^4.16.4",
+    "jquery": "^3.3.1",
     "pg": "^7.6.1"
   },
   "devDependencies": {
@@ -29,6 +34,7 @@
     "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
     "babel-loader": "^8.0.4",
+    "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.1",
     "eslint": "^5.8.0",
     "eslint-config-standard": "^12.0.0",
@@ -37,14 +43,18 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
     "file-loader": "^2.0.0",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^4.5.0",
     "mini-css-extract-plugin": "^0.4.4",
+    "nodemon": "^1.18.6",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "postcss-loader": "^3.0.0",
     "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "^4.24.0",
     "webpack-cli": "^3.1.2",
+    "webpack-dev-middleware": "^3.4.0",
     "webpack-dev-server": "^3.1.10"
   }
 }
